testsuite/tests/rename/should_fail/T15828.stderr

T15828.hs:9:20: error:
    • Type indexes must match class instance head
      Expected: T (Maybe a1) <tv>
        Actual: T (Maybe a) b
      where the `<tv>' arguments are type variables,
      distinct from each other and from the instance variables
    • In the type instance declaration for ‘T’
      In the instance declaration for ‘C (Maybe a)’